allow specifying default PHP and Node versions in config file

--- a/config.env.example
+++ b/config.env.example
@@ -1,5 +1,10 @@
 # This file will be sourced by all commands. You can set up some things here.
 
+# Default PHP and Node versions.
+# Used when PHP or Node is requested without specifying a version.
+DEFAULT_PHP_VERSION=8
+DEFAULT_NODE_VERSION=18
+
 # Import SSH keys to application users. Uses `ssh-import-keys`.
 # Optional.
 #SSH_IMPORT=gh:username
